--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,13 @@
 version: 0.2
 
-
 phases:
+  install:
+    runtime-versions:
+      java: openjdk8
+
+  build:
+    commands:
+      - mvn test
   pre_build:
     commands:
       - mvn clean install
