--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,18 +2,22 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      java: corretto8  # Use Amazon Corretto 8 (you can also specify corretto11, etc.)
     commands:
-      - yum update -y
-      - yum -y install java-1.8.0-amazon-corretto-devel
+      - echo Installing necessary dependencies...
+      - yum install -y docker
+      - service docker start
+
   pre_build:
     commands:
-      - mvn clean install
       - echo Logging in to Amazon ECR...
-      - aws --version
-      - eval $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
       - REPOSITORY_URI=339713191281.dkr.ecr.ca-central-1.amazonaws.com/aws-ecs-spring
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - echo Building Java project with Maven...
+      - mvn clean install
 
   build:
     commands:
@@ -25,13 +29,13 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo Pushing the Docker images...
+      - echo Pushing the Docker image to ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
-      - printf '[{"name":"order-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"my-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
-
+      
 artifacts:
   files:
     - imagedefinitions.json
